# deep-research-agent

./: .gitignore  LICENSE  README.md  app.py  main.py  pyproject.toml  requirements.txt
outputs/: small language models_20251113_230645.md  small language models_20251113_230645.txt
src/: __init__.py  agents.py  callbacks.py  config.py  graph.py  llm_tracker.py  state.py
src/utils/: __init__.py  cache.py  citations.py  credibility.py  exports.py  history.py  tools.py  web_utils.py
